// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 0 totaling $0.00 1`] = `
<h3>
  Viewing 
  0
   
  expenses
   totaling 
  $0.00
</h3>
`;

exports[`should render 1 totaling $1.00 1`] = `
<h3>
  Viewing 
  1
   
  expense
   totaling 
  $0.00
</h3>
`;
